Added string template example